VideoPlatformWayland: fix double recordingSaved emissions

The if block that was supposed to prevent against unnecessary emissions didn't check if the recording state was already set to finished.

BUG: 504535